# tercom

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  initialise.sh  prerequisites.sh  tercom.cc
tests/: BUILD.bazel  cubic_spline.h  cubic_spline_test.cc
