filegroup(
  name = "media",
  srcs = ["media/source/tomahawk.obj"],
)

cc_binary(
  name = "tercom",
  srcs = ["tercom.cc"],
  deps = [
    "//thirdparty:raylib",
  ],
  data = [
    "//thirdparty:resources",
    ":media",
  ],
  linkopts = select({
      "@platforms//os:macos": ["-framework OpenGL", "-framework Cocoa", "-framework IOKit", "-framework CoreFoundation"],
      "//conditions:default": []
  }) 
)
